--- a/run copy.ipynb
+++ b/run copy.ipynb
@@ -44,6 +44,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "The following command must be run outside of the IPython shell:\n",
+      "\n",
+      "    $ pip install pandas\n",
+      "\n",
+      "The Python package manager (pip) can only be used from outside of IPython.\n",
+      "Please reissue the `pip` command in a separate terminal or command prompt.\n",
+      "\n",
+      "See the Python documentation for more information on how to install packages:\n",
+      "\n",
+      "    https://docs.python.org/3/installing/\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install pandas"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
@@ -79,6 +106,15 @@
     "#!pip show torch\n",
     "#!pip show scikit-learn\n",
     "!pip show pandas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
    ]
   },
   {
