--- a/run.ipynb
+++ b/run.ipynb
@@ -95,48 +95,25 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([64, 3, 64, 64])\n",
-      "Iter: [1/16]\n",
-      "Iter: [2/16]\n",
-      "Iter: [3/16]\n",
-      "Iter: [4/16]\n",
-      "Iter: [5/16]\n",
-      "Iter: [6/16]\n",
-      "Iter: [7/16]\n",
-      "Iter: [8/16]\n",
-      "Iter: [9/16]\n",
-      "Iter: [10/16]\n",
-      "Iter: [11/16]\n",
-      "Iter: [12/16]\n",
-      "Iter: [13/16]\n",
-      "Iter: [14/16]\n",
-      "Iter: [15/16]\n",
-      "Iter: [16/16]\n",
-      "   11\n",
-      "0   0\n",
-      "1   0\n",
-      "2   0\n",
-      "3   0\n",
-      "4   0\n",
-      "           images   11   13  ...  11.1.1.1.1.1.1.1  11.1.1.1.1.1.1.1.1  11\n",
-      "0     test_0.JPEG  172  130  ...                 0                   0   0\n",
-      "1     test_1.JPEG  190  177  ...                 0                   0   0\n",
-      "2    test_10.JPEG  178  178  ...                 0                   0   0\n",
-      "3   test_100.JPEG  101  101  ...                 0                   0   0\n",
-      "4  test_1000.JPEG   48   35  ...                 0                   0   0\n",
-      "\n",
-      "[5 rows x 21 columns]\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "c:\\ProgramData\\Anaconda3\\lib\\site-packages\\torchvision\\transforms\\transforms.py:187: UserWarning: The use of the transforms.Scale transform is deprecated, please use transforms.Resize instead.\n",
-      "  warnings.warn(\"The use of the transforms.Scale transform is deprecated, \" +\n"
+      "  warnings.warn(\"The use of the transforms.Scale transform is deprecated, \" +\n",
+      "Traceback (most recent call last):\n",
+      "  File \"test.py\", line 64, in <module>\n",
+      "    images, pre = test(opt=opt)\n",
+      "  File \"test.py\", line 34, in test\n",
+      "    imagesize=opt.imagesize , shuffle=False)\n",
+      "  File \"c:\\Users\\ADMIN\\Documents\\GitHub\\Very-Deep-Convolutional-Networks-for-Large-Scale-Image-Recognition\\src\\preprocess.py\", line 18, in preprocess\n",
+      "    loaddata= ImageFolder(root=path, transform=transform)\n",
+      "  File \"c:\\ProgramData\\Anaconda3\\lib\\site-packages\\torchvision\\datasets\\folder.py\", line 178, in __init__\n",
+      "    target_transform=target_transform)\n",
+      "  File \"c:\\ProgramData\\Anaconda3\\lib\\site-packages\\torchvision\\datasets\\folder.py\", line 75, in __init__\n",
+      "    classes, class_to_idx = find_classes(root)\n",
+      "  File \"c:\\ProgramData\\Anaconda3\\lib\\site-packages\\torchvision\\datasets\\folder.py\", line 23, in find_classes\n",
+      "    classes = [d for d in os.listdir(dir) if os.path.isdir(os.path.join(dir, d))]\n",
+      "FileNotFoundError: [WinError 3] The system cannot find the path specified: './data\\\\test'\n"
      ]
     }
    ],
